# shooty

./: Cargo.toml
src/: main.rs
