[package]
name = "shooty"
version = "0.1.0"
edition = "2021"

[dependencies]
ggez = "0.9.3"
rand = "0.9.0"
self-compare = "0.2.0"

[profile.dev.package."*"]
# Set the default for dependencies in Development mode.
opt-level = 3

[profile.dev]
# Turn on a small amount of optimisation in Development mode.
opt-level = 1
